selfhost/test/typechecker/match/error_unreachable_after_else.out
Error at %FILE_NAME%:3:3
Unreachable match case
  |    _ => "efgh"
       ^
This case has already been covered by a previous case
